syntax = "proto3";
option java_multiple_files = true;

package com.example.grpc.server.grpcserver;

message TicketRequest {
    int32 number = 1;
    bool last = 2;
    bool first = 3;
    int32 num = 4;
    string content = 5;  
}


message CurrentAgent{
   string userId = 1;
   string firstName = 2;
   string lastName = 3;
   string gravatar = 4;
}

message Category{
  string name = 1;
  string description = 2;
}

message Device{
  string deviceId = 1;
  string hostname = 2;
  string state = 3;
  string os = 4;
}

message Content{
    CurrentAgent currentAgent = 1;
    Category Category = 2;
    Device device = 3;
    string id = 4;
    string issueOpened = 5;
    string issueClosed = 6;
    string state = 7;
    string description = 8;
}


message TicketResponse {
    string greeting = 1;
    string last = 2;
    string totalElements = 3;
    string totalPages = 4;
    string numberOfElements = 5;
    string first = 6;
    string number = 7;
    string empty = 8;
    Content content= 9;
}

service TicketService {
    rpc getTicketService(TicketRequest) returns (TicketResponse);
}